@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed the dictionary module not separating dictionaries from separate mods properly
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 2021-11-16
